[package]
name = "turn"
version = "0.0.3"
description = "Lodash-inspired Rust utility turning things into something else"
authors = ["Tom Bazarnik <tommywalkie@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/tommywalkie/turn.git"
exclude = [
    "docs" # To-be-implemented custom documentation
]

[dependencies]
duplicate = "0.2.9"