[package]
name = "turn"
version = "0.0.4"
description = "Lodash-inspired Rust utility turning things into something else"
authors = ["Tom Bazarnik <tommywalkie@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/tommywalkie/turn.git"
exclude = [
    "docs" # To-be-implemented custom documentation
]

[dependencies]
doc-comment = "0.3.3"
duplicate = "0.2.9"