[package]
name = "turn"
version = "0.0.6"
description = "Rust utility crate turning values into something else"
authors = ["Tom Bazarnik <tommywalkie@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/tommywalkie/turn.git"

[dependencies]
doc-comment = "0.3.3"
duplicate = "0.2.9"